# architecture_pattern_study

./: README.md  pyproject.toml  requirements-dev.txt  tasks.py
src/sampleproject/: __init__.py  main.py
